# metodologia-Active-Trace

./: .env.example  .gitignore  .jr-orchestrator-state.json  .opsx-starter-active-ia.md  AGENTS.md  CHANGES.md  README.md  docker-compose.yml
backend/: .coverage  .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed_completo.py  seed_dev.py  test_hash.py  test_hash2.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tenants.py  001_tenant.py  002_users_and_auth_tokens.py  003_rol_permiso.py  003_totp_secrets.py  004_rbac_catalog.py  005_audit_log.py  005_carrera_cohorte_materia.py  006_estructura_academica.py  006_usuario_asignacion.py  007_padron.py  007_usuarios_y_asignaciones.py  008_calificacion_umbral.py  008_padron_y_moodle.py  009_calificacion_umbral_materia.py  010_comunicacion.py  011_encuentros_guardias.py  012_evaluaciones_coloquios.py  013_avisos.py  014_tareas_internas.py  015_programas_fechas_academicas.py  016_liquidaciones_honorarios.py  017_perfil_y_mensajeria.py  6def229b8d4a_002_auth_tables.py  981efb7b4070_004_audit_log.py
backend/app/: main.py
backend/app/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/core/: audit_codes.py  auth_context.py  config.py  crypto.py  database.py  dependencies.py  enums.py  exceptions.py  logging.py  observability.py  permissions.py  rate_limiter.py  security.py  tenancy.py
backend/app/integrations/: moodle_ws.py
backend/app/models/: __init__.py  acknowledgment_aviso.py  asignacion.py  audit_log.py  auth_user.py  aviso.py  base.py  calificacion.py  carrera.py  cohorte.py  comentario_tarea.py  comunicacion.py  entrada_padron.py  evaluacion.py  factura.py  guardia.py  (+23 more)
backend/scripts/: fix_admin_encryption.py  seed_test_data.py
backend/tests/: conftest.py  test_alembic.py  test_analisis.py  test_analisis_monitor.py  test_app_startup.py  test_audit_codes.py  test_audit_log.py  test_audit_migration.py  test_audit_model.py  test_audit_repository.py  test_audit_service.py  test_auditoria_endpoint.py  test_auditoria_panel.py  test_auth.py  test_auth_e2e.py  test_auth_models.py  test_auth_repository.py  test_auth_router.py  test_auth_schemas.py  test_auth_service.py  test_aviso_helpers.py  test_aviso_schemas.py  test_avisos.py  test_calificaciones.py  test_coloquios_integration.py  test_coloquios_unit.py  test_comunicacion_endpoints.py  test_comunicacion_estado.py  test_comunicacion_modelo.py  test_comunicacion_repository.py  test_comunicacion_schemas.py  test_comunicacion_service.py  test_comunicacion_worker.py  test_config.py  test_core_models.py  test_crypto.py  test_database.py  test_encuentro_endpoints.py  test_encuentro_helpers.py  test_encuentro_service.py  (+35 more)
(+636 files in other folders)
