[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "activia-trace-backend"
version = "0.1.0"
description = "activia-trace — backend API (C-01 foundation)"
requires-python = ">=3.13"
dependencies = [
    # Web framework — [standard] includes python-multipart, email-validator, httpx, jinja2
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Security
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    # Encryption — AES-256-GCM for PII at rest
    "cryptography>=42.0.0",
    # Auth extras — TOTP, QR code generation, rate limiting
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "slowapi>=0.1.9",
    # Observability
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    # Padrón file parsers
    "openpyxl>=3.1.0",
    # Moodle WS async HTTP client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
